namespaces/openshift-console/route.openshift.io/routes/downloads.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2023-03-09T14:32:13Z"
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:host: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:insecureEdgeTerminationPolicy: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: console
    operation: Update
    time: "2023-03-09T14:32:13Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    subresource: status
    time: "2023-03-09T14:32:15Z"
  name: downloads
  namespace: openshift-console
  resourceVersion: "14915"
  uid: 7d692879-b023-4155-a641-2af3267143be
spec:
  host: downloads-openshift-console.apps.ocp.choomba.one
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: downloads
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2023-03-09T14:32:15Z"
      status: "True"
      type: Admitted
    host: downloads-openshift-console.apps.ocp.choomba.one
    routerCanonicalHostname: router-default.apps.ocp.choomba.one
    routerName: default
    wildcardPolicy: None
